[metadata]
name = EzGM
version = 1.0.0
author = Volkan Ozsarac
author_email = volkan.ozsarac@iusspavia.it
description = Toolbox for ground motion record selection and processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/volkanozsarac/EzGM
project_urls =
    Bug Tracker = https://github.com/volkanozsarac/EzGM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = openquake.engine; selenium; requests; numba
