[metadata]
name = EzGM
version = 1.5.6
author = Volkan Ozsarac
author_email = volkan.ozsarac@iusspavia.it
description = Toolbox for ground motion record selection and processing
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/volkanozsarac/EzGM
project_urls =
    Bug Tracker = https://github.com/volkanozsarac/EzGM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = openquake.engine==3.11.4; selenium==3.141.0; webdriverdownloader==1.1.0.3; numba==0.54.0
