[metadata]
name = EzGM
version = 1.6.5.6
author = Volkan Ozsarac
author_email = volkan.ozsarac@iusspavia.it
description = Toolbox for ground motion record selection and processing
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/volkanozsarac/EzGM
project_urls =
    Bug Tracker = https://github.com/volkanozsarac/EzGM/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = > 3.7
include_package_data = True
install_requires = openquake.engine>=3.14.0; selenium==4.2.0; numba>=0.55.1; beautifulsoup4>=4.11.1; tqdm>=4.64.0; h5py>=3.1.0; matplotlib>=3.1.2
